--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "caseless": "~0.11.0",
     "concat-stream": "^1.4.7",
-    "http-basic": "^2.5.1",
+    "http-basic": "https://github.com/jafd/http-basic",
     "http-response-object": "^1.1.0",
     "promise": "^7.1.1",
     "qs": "^6.1.0"
